--- a/css/style.css
+++ b/css/style.css
@@ -1331,13 +1331,13 @@ span {
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  transition: 1.5s ease;
+  transition: 1s ease;
   box-shadow: inset 5px 5px 5px #000a,
               inset -5px -5px 5px #a7a6a6aa;
 }
 
 #about .col-left .about-img:hover.about-img::before {
-  display: none;
+  opacity: 0;
 }
 #about .col-left .about-img::after {
   position: absolute;
@@ -1349,7 +1349,7 @@ span {
   /* background: #000; */
   opacity: 0;
   border-radius: 10px;
-  transition: 1.5s ease;
+  transition: 1s ease;
   box-shadow: inset 5px 5px 10px #fffa,
               inset -5px -5px 5px #000a;
   
@@ -1476,7 +1476,6 @@ span {
 
 #contact .contact-items {
   width: 100%;
-  z-index: 100;
 }
 
 #contact .contact-item {
@@ -1484,7 +1483,6 @@ span {
   height: auto;
   padding: 1.5em ;
   text-align: center;
-  color: #ddda;
   border-radius: 10px;
   border: none;
   margin: 1.5em auto;
@@ -1495,6 +1493,8 @@ span {
   transition: .5s ease;
   cursor: pointer;
   position: relative;
+  transform: preserve-3d;
+  border: 1px solid rgba(221, 221, 221, 0.233);
 }
 #contact .contact-item::before {
   position: absolute;
@@ -1508,7 +1508,6 @@ span {
   opacity: 1;
   transition: .5s ease;
   box-shadow: var(--contact-shadow);
-
 } 
 #contact .contact-item:hover.contact-item::before {
   opacity: 0;
@@ -1522,10 +1521,12 @@ span {
   width: 100%;
   height: 100%;
   box-shadow: var(--contact-shadow-hover);
+  /* backdrop-filter: blur(.3em);
+  -webkit-backdrop-filter: blur(.15em); */
   border-radius: 10px;
   z-index: -2;
   opacity: 0;
-  transition: .5s ease;
+  transition: .2s ease;
 } 
 #contact .contact-item:hover.contact-item::after {
   opacity: 1;
@@ -1585,8 +1586,7 @@ span {
   transform: scale(.8);
 }
 #contact .contact-item:hover .icon img {
-  /* box-shadow: var(--box-shadow); */
-  transform: scale(1);
+  transform: scale(1.1);
 }
 
 
@@ -1599,15 +1599,14 @@ span {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 2.5rem;
-  font-weight: 500;
+  font-weight: 600;
   letter-spacing: .05em;
   margin-bottom: 5px;
-  /* box-shadow: var(--contact-shadow); */
   border-radius: 10px;
   transition: .5s ease;
   position: relative;
   padding: .2em 1em;
-  
+  /* z-index: 10; */
 }
 #contact .contact-item h1::before {
   position: absolute;
@@ -1618,7 +1617,6 @@ span {
   height: 100%;
   box-shadow: var(--contact-shadow);
   border-radius: 10px;
-  z-index: -1;
   opacity: 1;
   transition: .5s ease;
 }
@@ -1633,10 +1631,10 @@ span {
   width: 100%;
   height: 100%;
   background-color: #f4f4f4;
+  z-index: -1;
   box-shadow: var(--contact-shadow-hover);
   border-radius: 10px;
-  z-index: -1;
-  opacity: 0;
+  opacity: 0; 
   transition: .5s ease;
 }
 #contact .contact-item:hover h1::after {
@@ -1666,6 +1664,7 @@ span {
   width: 100%;
   height: 100%;
   border-radius: 10px;
+  transition: .5s ease;
   box-shadow: var(--contact-shadow);
 }
 
