--- a/css/style.css
+++ b/css/style.css
@@ -904,7 +904,7 @@ span {
   flex-direction: column;
   width: 100%;
   margin: 0 auto;
-  padding: 0 0 50px 0;
+  padding: 0 0 30vh 0;
   background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -1144,7 +1144,7 @@ span {
   flex-direction: column-reverse;
   text-align: center;
   margin: 0 auto;
-  padding: 40px 10px 100px 10px;
+  padding: 100px 10px 100px 10px;
 
   background-image: url('../img/pexels-magda-ehlers-2660262.jpg');
 
