--- a/css/style.css
+++ b/css/style.css
@@ -818,9 +818,7 @@ span {
   background: linear-gradient(0deg, #dc134c, #333);
   color: white;
   /* width: 80vw; */
-  box-shadow: 5px 10px 5px #000,
-              inset 3px 3px 5px #000a,
-              inset -3px -3px 5px #fffa;
+  
   padding: .4em 4em;
   font-size: 2.5em;
   font-weight: 600;
@@ -828,12 +826,62 @@ span {
   border: none;
   border-radius: 10px;
   text-align: center;
-  transition: all .3s;
+  transition: .5s ease;
   font-family: 'Gruppo', cursive;
+  position: relative;
 
+}
+.dropbtn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  transition: .5s;
+  box-shadow: 5px 10px 5px #000,
+              inset 3px 3px 5px #000a,
+              inset -3px -3px 5px #fffa;
+}
+.dropbtn:hover.dropbtn::before {
+  opacity: 0;
+}
+
+.dropbtn::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: -1;
+  border-radius: 10px;
+  transition: .5s;
+  background: var(--overlay);
+  box-shadow: 0px 0px 10px #000,
+              inset 3px 3px 5px #fffa,
+              inset -3px -3px 5px #000a;
+}
+.dropbtn:hover.dropbtn::after {
+  opacity: .5;
+}
+.dropbtn:focus.dropbtn::after {
+  opacity: 1;
 }
 
 /* Dropdown button on hover & focus */
+.dropbtn:hover,
+.dropbtn:focus {
+  transform: scale(.98);
+  transition: .2s ease;
+}
+
+.dropbtn:focus {
+  transform: scale(.96);
+}
+
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
@@ -841,25 +889,7 @@ span {
   z-index: 4;
 }
 
-.dropbtn:hover,
-.dropbtn:focus {
-  transition: all .2s ease;
-  background: var(--overlay);
-  border: none;
-  border-radius: 10px;
-  outline: none;
-  animation: none;
-  box-shadow: 0px 0px 10px #000,
-              inset 3px 3px 5px #fffa,
-              inset -3px -3px 5px #000a;
-}
 
-.dropbtn:focus {
-  transform: scale(.98);
-  box-shadow: 0px 0px 10px #000,
-              inset 2px 2px 3px #fffa,
-              inset -2px -2px 3px #000a;
-}
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
