--- a/css/style.css
+++ b/css/style.css
@@ -1452,7 +1452,7 @@ span {
   flex-direction: column;
   width: 100%;
   margin: 0 auto;
-  padding: 30px 0;
+  padding-bottom: 30px;
   background-image: url('../img/pexels-magda-ehlers-2660262.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -1497,7 +1497,7 @@ span {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: .5s ease;
+  transition: 1s ease;
   cursor: pointer;
   position: relative;
   transform: preserve-3d;
@@ -1511,9 +1511,7 @@ span {
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  /* z-index: -2; */
-  opacity: 1;
-  transition: .5s ease;
+  transition: 1s ease;
   box-shadow: var(--contact-shadow-hover);
 } 
 #contact .contact-item:hover.contact-item::before {
@@ -1533,7 +1531,7 @@ span {
   border-radius: 10px;
   z-index: -2;
   opacity: 0;
-  transition: .5s ease;
+  transition: 1s ease;
 } 
 #contact .contact-item:hover.contact-item::after {
   opacity: 1;
@@ -1565,7 +1563,7 @@ span {
   background: #f4f4f4;
   border-radius: 10px;
   box-shadow: var(--contact-shadow-hover);
-  transition: .5s ease;
+  transition: 1s ease;
 }
 #contact .contact-item:hover.contact-item .icon::before {
   opacity: 0;
@@ -1582,7 +1580,7 @@ span {
   background: #f4f4f4;
   border-radius: 10px;
   box-shadow: var(--contact-shadow);
-  transition: .5s ease;
+  transition: 1s ease;
 }
 #contact .contact-item:hover.contact-item .icon::after {
   opacity: 1;
