--- a/css/style.css
+++ b/css/style.css
@@ -1511,7 +1511,7 @@ span {
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  transition: 1s ease;
+  transition: .5s ease;
   box-shadow: var(--contact-shadow-hover);
 } 
 #contact .contact-item:hover.contact-item::before {
@@ -1580,7 +1580,7 @@ span {
   background: #f4f4f4;
   border-radius: 10px;
   box-shadow: var(--contact-shadow);
-  transition: 1s ease;
+  transition: .5s ease;
 }
 #contact .contact-item:hover.contact-item .icon::after {
   opacity: 1;
