--- a/css/style.css
+++ b/css/style.css
@@ -1769,6 +1769,7 @@ span {
 #footer .brand h1::before {
   content: '\f337';
   text-align: center;
+  color: #ddd;
   background: var(--overlay);
   box-shadow: inset 3px 3px 5px rgba(221, 221, 221, 0.156),
               inset -3px -3px 5px rgba(0, 0, 0, 0.156);
@@ -1782,7 +1783,7 @@ span {
 }
 #footer .brand h2 {
   font-family: 'Ubuntu', sans-serif;
-  color: #fff;
+  color: #ddd;
   font-weight: 500;
   font-size: 1.8rem;
   letter-spacing: 0.1rem;
@@ -1794,7 +1795,7 @@ span {
   align-items: center;
   transform: translateY(4em);
   opacity: 0;
-  transition: 2s;
+  transition: 3s;
 }
 #footer .brand:hover.brand h2 {
   transform: translateY(.5em);
@@ -1852,7 +1853,7 @@ span {
             position: absolute;
             width: 100%;
             height: 100%;
-            background: #9414256e;
+            background: #c706206e;
             box-shadow: 0 0 0.5em #000a inset;
             pointer-events: none;
         }
@@ -1877,7 +1878,7 @@ span {
   position: absolute;
   width: 1em;
   height: 1em;
-  background: #9414256e;
+  background: #c706206e;
 
   transform: translateY(-50%) rotateX(90deg);
   box-shadow: 0 0 0.5em #000a inset;
