--- a/css/style.css
+++ b/css/style.css
@@ -1941,7 +1941,7 @@ span {
   border-radius: 10px;
   /* background-image: var(--overlay); */
   /* opacity: .5; */
-  background-image: linear-gradient(0deg, transparent, #29323cd8);
+  background-image: linear-gradient(0deg, transparent, #252e36c4 50%);
   box-shadow: inset 3px 3px 5px #f4f4f4,
               inset -3px 0px 5px #000;
   pointer-events: none;
@@ -1981,6 +1981,7 @@ span {
   height: 50px;
   width: 50px;
   margin: 0 5px;
+  transition: 1s ease;
 }
 #footer .social-item img {
   filter: grayscale(0);
