--- a/css/style.css
+++ b/css/style.css
@@ -1293,12 +1293,12 @@ span {
   display: inline-block;
   border-radius: 10px;
   font-size: 1.8rem;
-  font-weight: 600;
+  font-weight: 500;
   margin-bottom: 10px;
   padding: .5em;
-  box-shadow: inset 3px 3px 5px #000a,
-              inset -3px -3px 5px #ddda;
-  transition: .3s linear;
+  
+  transition: .5s ease;
+  position: relative;
 }
 #about .col-right:hover.col-right h2 {
   /* letter-spacing: 0.1rem; */
@@ -1306,6 +1306,32 @@ span {
   box-shadow: inset 3px 3px 5px #ddd,
               inset -3px -3px 5px #000a;
 } 
+#about .col-right h2::before,
+#about .col-right h2::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: .5s ease;
+  border-radius: 10px;
+}
+#about .col-right h2::before {
+  box-shadow: inset 3px 3px 5px #000a,
+              inset -3px -3px 5px #ddda;
+}
+#about .col-right:hover.col-right h2::before {
+  opacity: 0;
+}
+#about .col-right h2::after {
+  box-shadow: inset 3px 3px 5px #ddda,
+              inset -3px -3px 5px #000a;
+  opacity: 0;
+}
+#about .col-right h2:hover.col-right h2::after {
+  opacity: 1;
+}
 
 #about .col-right p {
   margin-bottom: 20px;
@@ -1553,10 +1579,10 @@ span {
   margin: 5px auto 10px auto;
   padding: .5em 1em;
   border-radius: 10px;
-  transition: .5s ease;
   position: relative;
   display: grid;
   place-items: center;
+  transition: .5s ease;
 }
 #contact .icon::before {
   position: absolute;
@@ -1580,8 +1606,8 @@ span {
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
   z-index: -1;
+  opacity: 0;
   background: #f4f4f4;
   border-radius: 10px;
   box-shadow: var(--contact-shadow);
@@ -1598,9 +1624,6 @@ span {
 #contact .contact-item:hover .icon img {
   transform: scale(1.1);
 }
-
-
-
 
 #contact .contact-info h1 {
   background-image: linear-gradient(10deg, purple, #dc1489, skyblue, purple, #dc1489, skyblue );
