--- a/css/style.css
+++ b/css/style.css
@@ -1875,7 +1875,7 @@ span {
             position: absolute;
             width: 100%;
             height: 100%;
-            background: #c706206e;
+            background: #c7062056;
             box-shadow: 0 0 0.5em #000a inset;
             pointer-events: none;
         }
@@ -1900,7 +1900,7 @@ span {
   position: absolute;
   width: 1em;
   height: 1em;
-  background: #c706206e;
+  background: #c7062056;
 
   transform: translateY(-50%) rotateX(90deg);
   box-shadow: 0 0 0.5em #000a inset;
@@ -2030,6 +2030,7 @@ span {
 #footer p, #date {
   color: #f4f4f4;
   font-size: 1.3rem;
+  text-transform: capitalize;
 
 }
 
@@ -2037,7 +2038,9 @@ span {
 #bs21 {
   width: 100%;
   text-align: center;
-  font-size: 1.1rem;
+}
+#bs21 p, #bs21 span {
+  font-size: 1.5rem;
 }
 
 /*end of bs12*/
