--- a/css/style.css
+++ b/css/style.css
@@ -1964,7 +1964,7 @@ span {
   /* background-image: var(--overlay); */
   /* opacity: .5; */
   background-image: linear-gradient(0deg, transparent, #252e36c4 50%);
-  box-shadow: inset 3px 3px 5px #f4f4f4,
+  box-shadow: inset 3px 3px 5px #ddda,
               inset -3px 0px 5px #000;
   pointer-events: none;
   transition: 1s ease;
