--- a/css/style.css
+++ b/css/style.css
@@ -783,7 +783,7 @@ span {
   border-radius: 50%;
   box-shadow: 2px 2px 5px #000,
               inset 2px 2px 3px #ddda,
-              inset -2px -2px 5px rgba(148, 29, 29, 0.667);
+              inset -2px -2px 5px #000a;
   padding: 10px;
   margin-top: 15px;
   margin-bottom: 20px;
@@ -1987,19 +1987,19 @@ span {
   height: 100%;
   border-radius: 10px;
   /* background-image: var(--overlay); */
-  /* opacity: .5; */
-  background-image: linear-gradient(0deg, transparent, #252e36c4 50%);
+  opacity: 1;
+  background-image: linear-gradient(0deg ,#252e36c4, #6e051a9c);
   box-shadow: inset 3px 3px 5px #ddda,
               inset -3px 0px 5px #000;
   pointer-events: none;
-  transition: 1s ease;
+  transition: .5s ease;
+  z-index: 1;
 }
 #footer .social-icon:hover.social-icon::before{
   opacity: 0;
-  z-index: -1;
 }
 #footer .social-icon::after {
-  content: "\f0c0";
+  content: "\f007";
   position: absolute;
   font-family: 'Font Awesome 5 Free';
   font-size: 2em;
