--- a/css/style.css
+++ b/css/style.css
@@ -372,11 +372,14 @@ span {
 
 #header .nav-list ul.active {
   left: 20%;
+  /* box-shadow: inset 3px 3px 5px#ddda,
+              inset -3px -3px 5px #000;
+  background: var(--overlay); */
   background: linear-gradient(90deg, #000, #4e0101, #000);
 }
 
 #header .nav-list ul a {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 500;
   letter-spacing: 0.2rem;
   text-decoration: none;
@@ -390,9 +393,13 @@ span {
 
 #header .nav-list ul a i {
   margin: 0 auto;
-  padding-right: 1em;
+  margin-right: .4em;
+  padding: .4em;
   /* font-size: 2rem; */
   color: #fffa;
+  border-radius: 50%;
+  box-shadow: inset 2px 2px 3px #ddda,
+              inset -2px -2px 3px #000a;
 } 
 
 #header .nav-list ul a::after {
@@ -2423,11 +2430,14 @@ span {
   #header .nav-list ul li a {
     font-size: 1.8rem;
   }
-  
+  #header .nav-list ul.active {
+    background: none;
+  }
   #header .nav-list ul li a i {
     margin: 0 auto;
-    padding: .1em;
-    /* font-size: 1.1rem; */
+    margin-right: .2em;
+    padding: .4em;
+    font-size: 1.5rem;
   }
   #header .nav-list ul a:after {
     display: none;
