--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ span {
 
 #header .header {
   min-height: 8vh;
-  background-color: rgba(31, 30, 30, 0.5);
+  background-color: #1f1e1e80;
   transition: 0.3s ease background-color;
 }
 
@@ -372,10 +372,9 @@ span {
 
 #header .nav-list ul.active {
   left: 20%;
-  /* box-shadow: inset 3px 3px 5px#ddda,
+  box-shadow: inset 3px 3px 5px #ddda,
               inset -3px -3px 5px #000;
-  background: var(--overlay); */
-  background: linear-gradient(90deg, #000, #4e0101, #000);
+  background-color: #29323c;
 }
 
 #header .nav-list ul a {
@@ -393,9 +392,9 @@ span {
 
 #header .nav-list ul a i {
   margin: 0 auto;
-  margin-right: .4em;
+  margin-right: .5em;
   padding: .4em;
-  /* font-size: 2rem; */
+  text-align: left;
   color: #fffa;
   border-radius: 50%;
   box-shadow: inset 2px 2px 3px #ddda,
@@ -1766,6 +1765,7 @@ span {
   padding: 1em;
   overflow: hidden;
   border-radius: 10px;
+  cursor: pointer;
   
   position: relative;
 }
@@ -2432,6 +2432,7 @@ span {
   }
   #header .nav-list ul.active {
     background: none;
+    box-shadow: none;
   }
   #header .nav-list ul li a i {
     margin: 0 auto;
