--- a/css/style.css
+++ b/css/style.css
@@ -369,11 +369,13 @@ span {
   transition: .3s ease;
   color: crimson;
 }
+#header .nav-list ul li:hover i {
+  transition: .3s ease;
+  color: crimson;
+}
 
 #header .nav-list ul.active {
   left: 20%;
-  box-shadow: inset 3px 3px 5px #ddda,
-              inset -3px -3px 5px #000;
   background-color: #29323c;
 }
 
