--- a/css/style.css
+++ b/css/style.css
@@ -1554,7 +1554,7 @@ span {
 
 #contact .contact-item {
   width: 75%;
-  height: auto;
+  /* height: auto; */
   text-align: center;
   border-radius: 10px;
   padding: 1.5em ;
@@ -1567,7 +1567,9 @@ span {
   cursor: pointer;
   position: relative;
   transform: preserve-3d;
-  border: 1px solid rgba(221, 221, 221, 0.233);
+  border: none;
+  outline: none;
+  background: none;
 }
 #contact .contact-item::before {
   position: absolute;
@@ -1606,7 +1608,7 @@ span {
 
 #contact .contact-item:hover{
   transform: scale(.96);
-  transition: 1s ease;
+  transition: .5s ease;
   transform: preserve-3d;
 }
 
@@ -1664,7 +1666,7 @@ span {
 
 
 #contact .contact-item:hover .icon img {
-  transform: scale(1.1);
+  transform: scale(1);
   transform: preserve-3d;
 
 }
@@ -2342,13 +2344,15 @@ span {
 
   #contact .contact-item {
     width: 30%;
-    margin: 0px;
-    flex-direction: row;
+    margin: 0px auto;
+    display: grid;
+    place-items: center;
   }
 
   #contact .contact-item .icon {
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
+    margin: 1em auto;
   }
 
   #contact .contact-item .icon img {
@@ -2356,9 +2360,10 @@ span {
   }
 
   #contact .contact-item .contact-info {
-    width: 100%;
-    text-align: left;
-    padding: 20px;
+    width: auto;
+    text-align: center;
+    margin: .2em auto;
+    /* padding: 20px; */
   }
 
   /*End of Contact*/
@@ -2386,7 +2391,7 @@ span {
   }
 
   .brand h1 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 
   #header .nav-list ul li a{
@@ -2444,7 +2449,7 @@ span {
   }
 
   #header .nav-list ul li a {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
   #header .nav-list ul.active {
     background: none;
@@ -2506,18 +2511,22 @@ span {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    padding: 20px;
-    margin: 20px auto;
+    padding: 0;
+    margin: 0 auto;
   }
 
   #contact .contact-info h1 {
-    font-size: 3.2em;
+    font-size: 2.5em;
     margin-bottom: 10px;
   }
   #contact .contact-info h2 {
-    font-size: 1.5em;
+    font-size: 1.2em;
+    padding: .3em;
   }
-
+  #contact .icon {
+    padding: 0;
+    margin: 0 auto;
+  }
   /*about*/
 
   #about .col-right .section-title:after {
