--- a/css/style.css
+++ b/css/style.css
@@ -582,9 +582,11 @@ span {
 #hero-h1 {
   background: transparent;
   backdrop-filter: blur(4px);
-  padding: 15px;
+  padding: 5px 15px;
   border-radius: 5px;
   height: 50vh;
+  position: absolute;
+  top: 20%;
 }
 
 #welcome-section h1 {
@@ -592,7 +594,7 @@ span {
   width: fit-content;
   /* box-shadow: 5px 20px 5px rgba(0, 0, 0, 0.185); */
   font-size: 4.8rem;
-  position: relative;
+  /* position: relative; */
   color: #eee;
   font-family: 'Philosopher', sans-serif;
 }
