--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,7 @@ span {
 
 /* END OF TEXT-REFLECT CSS */
 
+/* section titles */
 .section-title span {
   position: relative;
   color: #dc143c;
@@ -209,6 +210,7 @@ span {
     color: darkblue;
   }
 }
+/* end of section titles */
 
 #aka span {
   position: relative;
@@ -228,92 +230,6 @@ span {
     color: tomato;
   }
 }
-
-#cta-header {
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  font-family: 'Gruppo', cursive;
-  padding: .8em 1em;
-  margin: 10px 5px;
-  width: 70%;
-  border-radius: 40px;
-
-  background-color: #8584843a;
-  box-shadow: var(--box-shadow);
-  text-shadow: 2px 2px 2px #000;
-
-  transition: .2s linear;
-}
-
-#cta-header::before {
-  content: '';
-  position: absolute;
-  bottom: -40px;
-  left: 5%;
-  width: 90%;
-  height: 20px;
-  border-radius: 50%;
-  background: #e4dedf36;
-  filter: blur(5px);
-  animation: shadowButton 3s linear infinite;
-  animation-delay: 5s;
-  opacity: .3;
-}
-
-@keyframes shadowButton {
-  40% {
-    background: #dc143c;
-    filter: blur(5px);
-  }
-}
-
-#cta-header:hover,
-#cta-header:focus {
-  transition: .2s linear;
-  transform: scale(.98);
-  box-shadow: var(--box-shadow-hover);
-
-}
-
-
-#cta-header span {
-  position: relative;
-  display: inline-block;
-  color: #fff;
-  font-size: 4rem;
-  font-weight: 700;
-  animation: animate 3s ease-in-out infinite;
-  animation-delay: calc(5s + .2s * var(--i))
-}
-
-/* cta keyframes*/
-@keyframes animate {
-  0% {
-    transform: translateY(0px);
-
-  }
-
-  20% {
-    transform: translateY(-5px);
-    color: #cd143c;
-    background: linear-gradient(0deg, #ff0000, #dc143c, #ff0000, #000);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-transform: uppercase;
-    box-shadow: none;
-    text-shadow: none;
-  }
-
-  40%,
-  100% {
-    transform: translateY(0);
-
-  }
-}
-
-/*end of cta keyframes*/
-
 
 .brand h1 {
   font-size: 2.7rem;
@@ -627,6 +543,92 @@ span {
     opacity: 1;
   }
 }
+/* welcome section button */
+#cta-header {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  font-family: 'Gruppo', cursive;
+  padding: .8em 1em;
+  margin: 10px 5px;
+  width: 70%;
+  border-radius: 40px;
+  background-color: #8584844b;
+  text-shadow: 2px 2px 2px #000;
+  transition: .3s linear;
+}
+#cta-header::before {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 40px;
+  transition: .3s ease;
+  box-shadow: inset 3px 3px 5px #ddda,
+              inset -3px -3px 5px #000a;
+}
+#cta-header::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 40px;
+  opacity: 0;
+  transition: .3s ease;
+  box-shadow: inset 3px 3px 5px #000a,
+              inset -3px -3px 5px #ddda;
+}
+#cta-header:hover,
+#cta-header:focus{
+  transition: .3s linear;
+  transform: scale(.95);
+}
+#cta-header:hover#cta-header::before {
+  opacity: 0;
+}
+#cta-header:hover#cta-header::after {
+  opacity: 1;
+}
+#cta-header span {
+  position: relative;
+  display: inline-block;
+  color: #fff;
+  font-size: 4rem;
+  font-weight: 700;
+  animation: animate 3s ease-in-out infinite;
+  animation-delay: calc(5s + .2s * var(--i))
+}
+
+/* cta keyframes*/
+@keyframes animate {
+  0% {
+    transform: translateY(0px);
+
+  }
+
+  20% {
+    transform: translateY(-5px);
+    color: #cd143c;
+    background: linear-gradient(0deg, #ff0000, #dc143c, #ff0000, #000);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-transform: uppercase;
+    box-shadow: none;
+    text-shadow: none;
+  }
+
+  40%,
+  100% {
+    transform: translateY(0);
+  }
+}
+/*end of cta keyframes*/
+
+/* end of welcome section button */
 
 /*End of welcome-section*/
 
